[package]
name = "radicle-seed"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
librad = { path = "../librad" }
async-trait = "0.1"
thiserror = "1.0"
tokio = "0.2"
futures = "0.3"
argh = "0.1.3"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"

[dependencies.radicle-keystore]
git = "https://github.com/radicle-dev/radicle-keystore"
rev = "13eb49f85d574cff4abdbddc721226588a08f941"
#rev = "3377e666bde3130a06dd19343e7df2eaa774176a"
